// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Screenshot and Visual Testing Color Theme Verification Color palette consistency: color-palette 1`] = `
<div>
  <div
    class="grid grid-cols-4 gap-4 p-8"
  >
    <div
      class="space-y-2"
    >
      <h4
        class="font-medium"
      >
        Primary
      </h4>
      <div
        class="w-16 h-16 bg-blue-500 rounded"
      />
      <div
        class="w-16 h-16 bg-blue-600 rounded"
      />
      <div
        class="w-16 h-16 bg-blue-700 rounded"
      />
    </div>
    <div
      class="space-y-2"
    >
      <h4
        class="font-medium"
      >
        Secondary
      </h4>
      <div
        class="w-16 h-16 bg-gray-500 rounded"
      />
      <div
        class="w-16 h-16 bg-gray-600 rounded"
      />
      <div
        class="w-16 h-16 bg-gray-700 rounded"
      />
    </div>
    <div
      class="space-y-2"
    >
      <h4
        class="font-medium"
      >
        Success
      </h4>
      <div
        class="w-16 h-16 bg-green-500 rounded"
      />
      <div
        class="w-16 h-16 bg-green-600 rounded"
      />
      <div
        class="w-16 h-16 bg-green-700 rounded"
      />
    </div>
    <div
      class="space-y-2"
    >
      <h4
        class="font-medium"
      >
        Error
      </h4>
      <div
        class="w-16 h-16 bg-red-500 rounded"
      />
      <div
        class="w-16 h-16 bg-red-600 rounded"
      />
      <div
        class="w-16 h-16 bg-red-700 rounded"
      />
    </div>
  </div>
</div>
`;

exports[`Screenshot and Visual Testing Color Theme Verification Contrast verification: contrast-examples 1`] = `
<div>
  <div
    class="space-y-4 p-8"
  >
    <div
      class="bg-white text-gray-900 p-4 rounded"
    >
      Dark text on light background (High contrast)
    </div>
    <div
      class="bg-blue-600 text-white p-4 rounded"
    >
      Light text on dark background (High contrast)
    </div>
    <div
      class="bg-gray-100 text-gray-600 p-4 rounded"
    >
      Medium contrast text
    </div>
    <div
      class="bg-yellow-50 text-yellow-800 p-4 rounded border border-yellow-200"
    >
      Warning: Medium contrast with border
    </div>
  </div>
</div>
`;

exports[`Screenshot and Visual Testing Component Screenshots at Different Viewports Button Variants - All button variants renders correctly on ipad_landscape (1024×768): Button Variants-ipad_landscape-1024x768 1`] = `
<div
  class="space-y-4 p-8"
>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-primary-500 text-white hover:bg-primary-600 active:bg-primary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Default Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 border border-neutral-300 bg-white hover:bg-neutral-50 active:bg-neutral-100 h-10 px-4 py-2 min-h-[44px]"
  >
    Outline Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Secondary Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-error-500 text-white hover:bg-error-600 active:bg-error-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Destructive Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 hover:bg-neutral-100 active:bg-neutral-200 h-10 px-4 py-2 min-h-[44px]"
  >
    Ghost Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 text-primary-500 underline-offset-4 hover:underline active:text-primary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Link Button
  </button>
</div>
`;

exports[`Screenshot and Visual Testing Component Screenshots at Different Viewports Button Variants - All button variants renders correctly on ipad_portrait (768×1024): Button Variants-ipad_portrait-768x1024 1`] = `
<div
  class="space-y-4 p-8"
>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-primary-500 text-white hover:bg-primary-600 active:bg-primary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Default Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 border border-neutral-300 bg-white hover:bg-neutral-50 active:bg-neutral-100 h-10 px-4 py-2 min-h-[44px]"
  >
    Outline Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Secondary Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-error-500 text-white hover:bg-error-600 active:bg-error-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Destructive Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 hover:bg-neutral-100 active:bg-neutral-200 h-10 px-4 py-2 min-h-[44px]"
  >
    Ghost Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 text-primary-500 underline-offset-4 hover:underline active:text-primary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Link Button
  </button>
</div>
`;

exports[`Screenshot and Visual Testing Component Screenshots at Different Viewports Button Variants - All button variants renders correctly on iphone_12 (390×844): Button Variants-iphone_12-390x844 1`] = `
<div
  class="space-y-4 p-8"
>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-primary-500 text-white hover:bg-primary-600 active:bg-primary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Default Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 border border-neutral-300 bg-white hover:bg-neutral-50 active:bg-neutral-100 h-10 px-4 py-2 min-h-[44px]"
  >
    Outline Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Secondary Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-error-500 text-white hover:bg-error-600 active:bg-error-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Destructive Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 hover:bg-neutral-100 active:bg-neutral-200 h-10 px-4 py-2 min-h-[44px]"
  >
    Ghost Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 text-primary-500 underline-offset-4 hover:underline active:text-primary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Link Button
  </button>
</div>
`;

exports[`Screenshot and Visual Testing Component Screenshots at Different Viewports Button Variants - All button variants renders correctly on iphone_12_pro_max (414×896): Button Variants-iphone_12_pro_max-414x896 1`] = `
<div
  class="space-y-4 p-8"
>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-primary-500 text-white hover:bg-primary-600 active:bg-primary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Default Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 border border-neutral-300 bg-white hover:bg-neutral-50 active:bg-neutral-100 h-10 px-4 py-2 min-h-[44px]"
  >
    Outline Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Secondary Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-error-500 text-white hover:bg-error-600 active:bg-error-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Destructive Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 hover:bg-neutral-100 active:bg-neutral-200 h-10 px-4 py-2 min-h-[44px]"
  >
    Ghost Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 text-primary-500 underline-offset-4 hover:underline active:text-primary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Link Button
  </button>
</div>
`;

exports[`Screenshot and Visual Testing Component Screenshots at Different Viewports Button Variants - All button variants renders correctly on iphone_se (375×667): Button Variants-iphone_se-375x667 1`] = `
<div
  class="space-y-4 p-8"
>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-primary-500 text-white hover:bg-primary-600 active:bg-primary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Default Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 border border-neutral-300 bg-white hover:bg-neutral-50 active:bg-neutral-100 h-10 px-4 py-2 min-h-[44px]"
  >
    Outline Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Secondary Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-error-500 text-white hover:bg-error-600 active:bg-error-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Destructive Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 hover:bg-neutral-100 active:bg-neutral-200 h-10 px-4 py-2 min-h-[44px]"
  >
    Ghost Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 text-primary-500 underline-offset-4 hover:underline active:text-primary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Link Button
  </button>
</div>
`;

exports[`Screenshot and Visual Testing Component Screenshots at Different Viewports Button Variants - All button variants renders correctly on large (1920×1080): Button Variants-large-1920x1080 1`] = `
<div
  class="space-y-4 p-8"
>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-primary-500 text-white hover:bg-primary-600 active:bg-primary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Default Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 border border-neutral-300 bg-white hover:bg-neutral-50 active:bg-neutral-100 h-10 px-4 py-2 min-h-[44px]"
  >
    Outline Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Secondary Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-error-500 text-white hover:bg-error-600 active:bg-error-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Destructive Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 hover:bg-neutral-100 active:bg-neutral-200 h-10 px-4 py-2 min-h-[44px]"
  >
    Ghost Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 text-primary-500 underline-offset-4 hover:underline active:text-primary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Link Button
  </button>
</div>
`;

exports[`Screenshot and Visual Testing Component Screenshots at Different Viewports Button Variants - All button variants renders correctly on medium (1440×900): Button Variants-medium-1440x900 1`] = `
<div
  class="space-y-4 p-8"
>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-primary-500 text-white hover:bg-primary-600 active:bg-primary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Default Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 border border-neutral-300 bg-white hover:bg-neutral-50 active:bg-neutral-100 h-10 px-4 py-2 min-h-[44px]"
  >
    Outline Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Secondary Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-error-500 text-white hover:bg-error-600 active:bg-error-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Destructive Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 hover:bg-neutral-100 active:bg-neutral-200 h-10 px-4 py-2 min-h-[44px]"
  >
    Ghost Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 text-primary-500 underline-offset-4 hover:underline active:text-primary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Link Button
  </button>
</div>
`;

exports[`Screenshot and Visual Testing Component Screenshots at Different Viewports Button Variants - All button variants renders correctly on small (1024×768): Button Variants-small-1024x768 1`] = `
<div
  class="space-y-4 p-8"
>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-primary-500 text-white hover:bg-primary-600 active:bg-primary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Default Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 border border-neutral-300 bg-white hover:bg-neutral-50 active:bg-neutral-100 h-10 px-4 py-2 min-h-[44px]"
  >
    Outline Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Secondary Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-error-500 text-white hover:bg-error-600 active:bg-error-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Destructive Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 hover:bg-neutral-100 active:bg-neutral-200 h-10 px-4 py-2 min-h-[44px]"
  >
    Ghost Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 text-primary-500 underline-offset-4 hover:underline active:text-primary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Link Button
  </button>
</div>
`;

exports[`Screenshot and Visual Testing Component Screenshots at Different Viewports Button Variants - All button variants renders correctly on xl (2560×1440): Button Variants-xl-2560x1440 1`] = `
<div
  class="space-y-4 p-8"
>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-primary-500 text-white hover:bg-primary-600 active:bg-primary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Default Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 border border-neutral-300 bg-white hover:bg-neutral-50 active:bg-neutral-100 h-10 px-4 py-2 min-h-[44px]"
  >
    Outline Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Secondary Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-error-500 text-white hover:bg-error-600 active:bg-error-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Destructive Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 hover:bg-neutral-100 active:bg-neutral-200 h-10 px-4 py-2 min-h-[44px]"
  >
    Ghost Button
  </button>
  <button
    aria-busy="false"
    aria-disabled="false"
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 text-primary-500 underline-offset-4 hover:underline active:text-primary-700 h-10 px-4 py-2 min-h-[44px]"
  >
    Link Button
  </button>
</div>
`;

exports[`Screenshot and Visual Testing Component State Screenshots Button states visual verification: button-all-states 1`] = `
<div>
  <div
    class="grid grid-cols-2 gap-4 p-8"
  >
    <div
      class="space-y-4"
    >
      <h3>
        Normal States
      </h3>
      <button
        aria-busy="false"
        aria-disabled="false"
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-primary-500 text-white hover:bg-primary-600 active:bg-primary-700 h-10 px-4 py-2 min-h-[44px]"
      >
        Normal
      </button>
      <button
        aria-busy="false"
        aria-disabled="false"
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 border border-neutral-300 bg-white hover:bg-neutral-50 active:bg-neutral-100 h-10 px-4 py-2 min-h-[44px]"
      >
        Outline
      </button>
      <button
        aria-busy="false"
        aria-disabled="false"
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 h-10 px-4 py-2 min-h-[44px]"
      >
        Secondary
      </button>
    </div>
    <div
      class="space-y-4"
    >
      <h3>
        Special States
      </h3>
      <button
        aria-busy="true"
        aria-disabled="true"
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-primary-500 text-white hover:bg-primary-600 active:bg-primary-700 h-10 px-4 py-2 min-h-[44px]"
        disabled=""
      >
        <svg
          aria-hidden="true"
          class="mr-2 h-4 w-4 animate-spin"
          data-testid="mock-icon"
          height="24"
          width="24"
        />
        <span
          class="sr-only"
        >
          Loading...
        </span>
        <span
          aria-hidden="true"
        >
          Loading
        </span>
      </button>
      <button
        aria-busy="false"
        aria-disabled="true"
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-primary-500 text-white hover:bg-primary-600 active:bg-primary-700 h-10 px-4 py-2 min-h-[44px]"
        disabled=""
      >
        Disabled
      </button>
      <button
        aria-busy="false"
        aria-disabled="false"
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-primary-500 text-white hover:bg-primary-600 active:bg-primary-700 h-11 rounded-md px-8 min-h-[48px]"
      >
        Large
      </button>
    </div>
  </div>
</div>
`;

exports[`Screenshot and Visual Testing Component State Screenshots Form success state: form-success-modal 1`] = `
<div>
  <div
    class="fixed inset-0 flex items-center justify-center bg-black/50 z-50"
  >
    <div
      class="card-modern p-8 shadow-2xl animate-bounce-in"
    >
      <div
        class="text-center"
      >
        <div
          class="w-24 h-24 bg-green-100 rounded-full flex items-center justify-center mx-auto mb-6"
        >
          <svg
            class="w-16 h-16 text-green-600"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 13l4 4L19 7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <h3
          class="text-3xl font-bold text-gray-900 mb-4"
        >
          Parabéns!
        </h3>
        <p
          class="text-gray-600 mb-4"
        >
          Cadastro realizado com sucesso!
        </p>
        <div
          class="animate-pulse text-4xl font-bold text-green-600 mb-4"
        >
          +100 pontos!
        </div>
        <p
          class="text-sm text-gray-500"
        >
          Redirecionando para o painel...
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Screenshot and Visual Testing Error State Visualization Error message display: error-states 1`] = `
<div>
  <div
    class="space-y-4 p-8"
  >
    <div
      class="bg-red-50 border border-red-200 rounded p-4"
    >
      <div
        class="flex"
      >
        <div
          class="text-red-600 mr-3"
        >
          ⚠
        </div>
        <div>
          <h4
            class="text-red-800 font-medium"
          >
            Error occurred
          </h4>
          <p
            class="text-red-700 text-sm mt-1"
          >
            This is an error message with proper styling and contrast.
          </p>
        </div>
      </div>
    </div>
    <div
      class="space-y-2"
    >
      <label
        class="block text-sm font-medium text-gray-700"
      >
        Email
      </label>
      <input
        class="w-full border border-red-300 rounded px-3 py-2 text-red-900 placeholder-red-300 focus:ring-red-500 focus:border-red-500"
        placeholder="Invalid email"
      />
      <p
        class="text-red-600 text-sm"
      >
        Please enter a valid email address.
      </p>
    </div>
  </div>
</div>
`;

exports[`Screenshot and Visual Testing Interactive State Visualization Animation states: animation-states 1`] = `
<div>
  <div
    class="space-y-4 p-8"
  >
    <div
      class="animate-spin w-8 h-8 border-2 border-blue-600 border-t-transparent rounded-full"
    />
    <div
      class="animate-pulse bg-gray-200 h-4 rounded"
    />
    <div
      class="animate-bounce bg-blue-500 w-4 h-4 rounded-full"
    />
    <div
      class="transition-all duration-300 hover:scale-105 bg-green-500 p-4 rounded"
    >
      Hover to scale
    </div>
  </div>
</div>
`;

exports[`Screenshot and Visual Testing Interactive State Visualization Hover and focus states: interactive-states 1`] = `
<div>
  <div
    class="space-y-4 p-8"
  >
    <button
      aria-busy="false"
      aria-disabled="false"
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-offset-2 touch-target-44 bg-primary-500 text-white active:bg-primary-700 h-10 px-4 py-2 min-h-[44px] hover:bg-blue-700 focus:ring-2 focus:ring-blue-500"
    >
      Hover/Focus Button
    </button>
    <input
      class="border border-gray-300 rounded px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
      placeholder="Focus me"
    />
    <select
      class="border border-gray-300 rounded px-3 py-2 focus:ring-2 focus:ring-blue-500"
    >
      <option>
        Select option
      </option>
    </select>
  </div>
</div>
`;

exports[`Screenshot and Visual Testing Layout Structure Verification Grid layout consistency: grid-layout-desktop 1`] = `
<div>
  <div
    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 p-8"
  >
    <div
      class="bg-gray-100 p-4 rounded"
    >
      Item 1
    </div>
    <div
      class="bg-gray-100 p-4 rounded"
    >
      Item 2
    </div>
    <div
      class="bg-gray-100 p-4 rounded"
    >
      Item 3
    </div>
    <div
      class="bg-gray-100 p-4 rounded"
    >
      Item 4
    </div>
    <div
      class="bg-gray-100 p-4 rounded"
    >
      Item 5
    </div>
    <div
      class="bg-gray-100 p-4 rounded"
    >
      Item 6
    </div>
  </div>
</div>
`;

exports[`Screenshot and Visual Testing Loading State Visualization Loading indicators: loading-states 1`] = `
<div>
  <div
    class="space-y-8 p-8"
  >
    <div
      class="flex justify-center"
    >
      <div
        class="animate-spin rounded-full h-8 w-8 border-2 border-blue-600 border-t-transparent"
      />
    </div>
    <div
      class="space-y-3"
    >
      <div
        class="animate-pulse bg-gray-200 h-4 rounded w-3/4"
      />
      <div
        class="animate-pulse bg-gray-200 h-4 rounded w-1/2"
      />
      <div
        class="animate-pulse bg-gray-200 h-4 rounded w-5/6"
      />
    </div>
    <button
      aria-busy="true"
      aria-disabled="true"
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors disabled:pointer-events-none disabled:opacity-50 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 touch-target-44 bg-primary-500 text-white hover:bg-primary-600 active:bg-primary-700 h-10 px-4 py-2 min-h-[44px]"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="mr-2 h-4 w-4 animate-spin"
        data-testid="mock-icon"
        height="24"
        width="24"
      />
      <span
        class="sr-only"
      >
        Processing...
      </span>
      <span
        aria-hidden="true"
      >
        Submit Form
      </span>
    </button>
    <div
      class="w-full bg-gray-200 rounded-full h-2"
    >
      <div
        class="bg-blue-600 h-2 rounded-full w-2/3 transition-all duration-300"
      />
    </div>
  </div>
</div>
`;

exports[`Screenshot and Visual Testing Typography and Text Rendering Text in different languages: multilingual-text 1`] = `
<div>
  <div
    class="space-y-4 p-8"
  >
    <p
      class="text-base"
    >
      Português: Informações pessoais e dados de contato
    </p>
    <p
      class="text-base"
    >
      English: Personal information and contact details
    </p>
    <p
      class="text-base"
    >
      Español: Información personal y datos de contacto
    </p>
    <p
      class="text-base"
    >
      中文: 个人信息和联系方式
    </p>
    <p
      class="text-base"
    >
      العربية: المعلومات الشخصية وتفاصيل الاتصال
    </p>
  </div>
</div>
`;

exports[`Screenshot and Visual Testing Typography and Text Rendering Typography hierarchy: typography-hierarchy 1`] = `
<div>
  <div
    class="space-y-4 p-8"
  >
    <h1
      class="text-3xl font-bold tracking-tight bg-gradient-to-r from-gray-900 to-gray-700 bg-clip-text text-transparent"
    >
      Main Heading (H1)
    </h1>
    <h2
      class="text-2xl font-semibold text-gray-900"
    >
      Section Heading (H2)
    </h2>
    <h3
      class="text-lg font-medium text-gray-900"
    >
      Subsection Heading (H3)
    </h3>
    <p
      class="text-base text-gray-700"
    >
      Regular paragraph text with proper line height and spacing.
    </p>
    <p
      class="text-sm text-gray-600"
    >
      Small text for captions and secondary information.
    </p>
    <p
      class="text-xs text-gray-500"
    >
      Extra small text for fine print.
    </p>
  </div>
</div>
`;
